<?xml version="1.0"?>
<package format="2">
  <name>arti_movement_skill</name>
  <version>1.0.0</version>
  <description>The arti_movement_skill package</description>


  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Muehlbacher</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>arti_graph_processing</build_depend>
  <build_depend>arti_movement_skill_interface</build_depend>
  <build_depend>arti_movement_skill_msgs</build_depend>
  <build_depend>arti_ros_param</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>arti_graph_processing</build_export_depend>
  <build_export_depend>arti_movement_skill_interface</build_export_depend>
  <build_export_depend>arti_movement_skill_msgs</build_export_depend>
  <build_export_depend>arti_ros_param</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>arti_graph_processing</exec_depend>
  <exec_depend>arti_movement_skill_interface</exec_depend>
  <exec_depend>arti_movement_skill_msgs</exec_depend>
  <exec_depend>arti_ros_param</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>
</package>
