<?xml version="1.0"?>
<package format="2">
  <name>arti_movement_skill_interface</name>
  <version>1.0.0</version>
  <description>The arti_movement_skill_interface package</description>


 <maintainer email="c.muehlbacher@arti-robots.com">Clemens Muehlbacher</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arti_graph_processing</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>arti_graph_processing</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>arti_graph_processing</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
