<?xml version="1.0"?>
<package format="2">
  <name>arti_movement_skill_msgs</name>
  <version>1.0.0</version>
  <description>The arti_movement_skill_msgs package</description>


 <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>
 <maintainer email="c.muehlbacher@arti-robots.com">Clemens Muehlbacher</maintainer>

 
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!--<build_export_depend>message_generation</build_export_depend>-->

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
